Fix layout bug on browse page in Safari

--- a/src/client/site/browse_page/browse_page.scss
+++ b/src/client/site/browse_page/browse_page.scss
@@ -15,7 +15,7 @@
             justify-content : space-between;
 
             .view__mod_tile {
-                max-width     : calc(50% - 12px); // $size-margin-large / 2
+                width         : calc(50% - 12px); // $size-margin-large / 2
                 margin-bottom : $size-margin-large;
             }
         }
